# MultiArmedBandits

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE.txt  MAKEFILE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
multiarmedbandits/: run_algo.py
multiarmedbandits/algorithms/: __init__.py  boltzmann.py  boltzmann_rv.py  common.py  epsilongreedy.py  exp3.py  expthencommit.py  gradientbandit.py  multiarmed_bandit_models.py  thompson.py  ucb.py  utils.py
multiarmedbandits/environments/: __init__.py  common.py  gabenv.py  multiarmed_env.py  testbedenv.py  utils.py
multiarmedbandits/experiments/: compare_models.py  epsilon_greedy_exp.py
multiarmedbandits/experiments/boltzmann_exploration/: run_comparison.py
multiarmedbandits/experiments/boltzmann_random/: run_comparison.py
multiarmedbandits/experiments/epsilon_greedy/: run_comparision.py
multiarmedbandits/experiments/explorethencommit_exp/: run_comparision.py  run_test.py
multiarmedbandits/experiments/gradient_bandit/: run_comparision.py
multiarmedbandits/experiments/ucb_exp/: run_comparison.py
multiarmedbandits/run_algorithm/: __init__.py  compare_models.py  config_utils.py  metrics.py  train.py  train_multiarmed_bandits.py
multiarmedbandits/run_algorithm/experiments/boltzmann_exploration/: run_comparison.py
multiarmedbandits/run_algorithm/experiments/boltzmann_random/: run_comparison.py
multiarmedbandits/run_algorithm/experiments/epsilon_greedy/: run_comparision.py
multiarmedbandits/run_algorithm/experiments/explorethencommit_exp/: run_comparision.py
multiarmedbandits/run_algorithm/experiments/gradient_bandit/: run_comparision.py
multiarmedbandits/run_algorithm/trainings_configs/: app.py  env_tools.py  epsilon.yaml  run.py  test.py  test_VH.py  tools.py
multiarmedbandits/run_algorithm/utils/: __init__.py  helpfunctions.py
multiarmedbandits/utils/: __init__.py  abstract_posterior.py  continuous_posteriors.py  discrete_posteriors.py  helpclasses.py  posterior.py  posterior_2.py  testing_functions.py
playing_folder/mulitarmedbandit_env/: run_envs.ipynb
scripts/: run_html_report.sh  run_tests.sh
tests/: conftest.py  test_compare.py  test_muliarmed_algos.py  test_multiarmed_algos.py  test_multiarmed_env.py  test_quality.py
(+2 files in other folders)
