[tool.poetry]
name = "multiarmedbandits"
version = "0.1.0"
description = ""
authors = ["Andre Ferdinand <andre.ferdinand@uni-mannheim.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.1"
strenum = "^0.4.15"
ipykernel = "^6.25.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
