[tool.poetry]
name = "multiarmedbandits"
version = "0.1.1"
description = "Package to analyze multiarmedbandit algorithms"
authors = ["Andre Ferdinand <andre.ferdinand@uni-mannheim.de>"]
readme = "README.md"

[tool.ruff]
# Same as Black.
line-length = 127
# See https://beta.ruff.rs/docs/rules/
select = ["E", "F", "B", "UP", "C90", "RUF"]
# B028: Ignore explicit stacklevel`
# RUF013: Too many false positives (implicit optional)

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 15

[tool.black]
line-length = 127

[tool.isort]
profile = "black"
line_length = 127
src_paths = ["multiarmedbandits"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.25.1"
strenum = "^0.4.15"
ipykernel = "^6.25.0"
scipy = "^1.11.1"
matplotlib = "^3.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-lazy-fixture = "^0.6.3"
ruff = "^0.0.284"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
disable_warnings = ["couldnt-parse"]
branch = false
omit = [
  "tests/*",
]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "raise NotImplementedError()", "if typing.TYPE_CHECKING:"]